Bug 1421214 - Try GoToAnchor() with unescaped string before using document's charset. r=smaug